--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,21 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <h1>Sandbox for building tft-library</h1>
 
-<h2>TODO List</h2>
-<ul>
-  <li *ngFor="let todo of todos">
-    {{todo}}
-  </li>
-</ul>
-<div style="text-align:center">
-  <h3> Instant Search Component </h3>
-  <tft-instantsearch [config]="searchConfig">
+<tft-instantsearch [config]="searchConfig">
 
-    <tft-search-box>
-    </tft-search-box>
+  <tft-search-box>
+  </tft-search-box>
 
-    <tft-refinement-list attributeName="foodGroup" title="Filter by Food Group">
-    </tft-refinement-list>
-    <!-- <tft-sort-by [indices]="sortIndices">
-      
-    </tft-sort-by> -->
-    <tft-results>
-    </tft-results>
+  <tft-refinement-list attributeName="foodGroup" title="Filter by Food Group">
+  </tft-refinement-list>
+  <!-- <tft-sort-by [indices]="sortIndices">
     
-    <tft-pagination>
-    </tft-pagination>
+  </tft-sort-by> -->
+  <tft-pagination [maxPages]="3">
+  </tft-pagination>
+  <tft-results [transformItems]="logItem">
+  </tft-results>
 
-  </tft-instantsearch>
-</div>
+</tft-instantsearch>
+
 
