--- a/src/app/modules/search/pagination/pagination.component.html
+++ b/src/app/modules/search/pagination/pagination.component.html
@@ -5,5 +5,5 @@
   (page)="refine($event)">
 </mat-paginator>
 
-<tft-results-per-page [items]="pageSizeOptions"></tft-results-per-page>
+<!-- <tft-results-per-page [items]="pageSizeOptions"></tft-results-per-page> -->
 
