--- a/src/app/modules/search/refinement-list/refinement-list.component.html
+++ b/src/app/modules/search/refinement-list/refinement-list.component.html
@@ -1,46 +1,72 @@
-      <h3 class="mat-title"> {{title}} </h3>
-      <form
-        *ngIf="withSearchBox"
-        (submit)="handleSubmit($event)"
-        novalidate>
-        <input
-          autocapitalize="off"
-          autocorrect="off"
-          placeholder="{{searchPlaceholder}}"
-          role="textbox"
-          spellcheck="false"
-          type="text"
-          [value]="searchQuery"
-          (input)="handleChange($event.target.value)"
-        />
-      </form>
-      <mat-selection-list>
-        <mat-list-option
-          *ngFor="let item of items" 
-          [selected]="item.isRefined" 
-          (click)="refine($event, item)">
-          
-          <mat-chip-list>
-            <!-- <div> -->
-            <mat-chip 
-              color='accent' 
-              selected="true">
-              {{item.count}}
-            </mat-chip>
-            <tft-highlight
-              attributeName="highlighted"
-              [hit]="item">
-            </tft-highlight>
-          </mat-chip-list>
-          <!-- </div> -->
+<form
+  *ngIf="withSearchBox"
+  (submit)="handleSubmit($event)"
+  novalidate>
+  <input
+    autocapitalize="off"
+    autocorrect="off"
+    placeholder="{{searchPlaceholder}}"
+    role="textbox"
+    spellcheck="false"
+    type="text"
+    [value]="searchQuery"
+    (input)="handleChange($event.target.value)"
+  />
+</form>
+<mat-form-field>
+  <mat-select [placeholder]="title" multiple="true">
+    <mat-option 
+      *ngFor="let item of items" 
+      [value]="item.value"     
+      (click)="refine($event, item)">
+      {{ item.label | titlecase }}
 
-        </mat-list-option>
-      </mat-selection-list>
-      
-      <button
-        *ngIf="state.canToggleShowMore"
-        (click)="state.toggleShowMore()">
-        {{state.isShowingMore ? showLessLabel : showMoreLabel}}
-      </button>
+    </mat-option>
+  </mat-select>
+</mat-form-field>
+<!-- <mat-selection-list>
+  <mat-list-option
+    *ngFor="let item of items" 
+    [selected]="item.isRefined" 
+    (click)="refine($event, item)">
+    
+    <mat-chip-list>
+      <mat-chip 
+        color='accent' 
+        selected="true">
+        {{item.count}}
+      </mat-chip>
+      <tft-highlight
+        attributeName="highlighted"
+        [hit]="item">
+      </tft-highlight>
+    </mat-chip-list>
+
+  </mat-list-option>
+</mat-selection-list> -->
+<button 
+  mat-button 
+  (click)="selectAll()">
+  Select All
+</button>
+<button 
+  mat-button 
+  (click)="deselectAll()">
+  Deselect All
+</button>
+<button
+  *ngIf="state.canToggleShowMore"
+  (click)="state.toggleShowMore()">
+  {{state.isShowingMore ? showLessLabel : showMoreLabel}}
+</button>
 
 
+
+<!-- <mat-chip-list>
+  {{ item.label | titlecase }} 
+  <mat-chip 
+    color='accent' 
+    selected="true">
+    {{item.count}}
+  </mat-chip>
+</mat-chip-list> -->
