switched to example index uodated comments in example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   <tft-search-box>
   </tft-search-box>
 
-  <tft-refinement-list attributeName="foodGroup" title="Filter by Food Group">
+  <tft-refinement-list [attributeName]="filterCategory" [title]="filterPlaceholder">
   </tft-refinement-list>
   <!-- <tft-sort-by [indices]="sortIndices">
     
