pulled form element from search-box

--- a/src/app/modules/search/search-box/search-box.component.html
+++ b/src/app/modules/search/search-box/search-box.component.html
@@ -1,7 +1,7 @@
-<form
+<!-- <form
   [class]="cx('form')"
   novalidate
-  (submit)="handleSubmit($event)">
+  (submit)="handleSubmit($event)"> -->
   <mat-form-field>
     <input
       matInput
@@ -39,5 +39,5 @@
     </mat-icon>
     {{ resetTitle }}
   </button>
-</form>
+<!-- </form> -->
 
