auto-complete component stubbed and intitial functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
 
 <tft-instantsearch [config]="searchConfig">
 
+  <tft-auto-complete></tft-auto-complete>
+
   <tft-search-box>
   </tft-search-box>
 
