--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 
 <tft-instantsearch [config]="searchConfig">
 
-  <tft-auto-complete></tft-auto-complete>
+  <tft-auto-complete (submit)="logItem($event)"></tft-auto-complete>
 
   <tft-search-box>
   </tft-search-box>
