--- a/src/app/modules/search/auto-complete/auto-complete.component.html
+++ b/src/app/modules/search/auto-complete/auto-complete.component.html
@@ -1,29 +1,11 @@
-  <!-- <mat-form-field>
-    <input
+<form [formGroup]="formContainer">
+  <mat-form-field>
+    <input 
       matInput
       autocapitalize="off"
       autocorrect="off"
-      placeholder="{{placeholder}}"
-      role="textbox"
-      spellcheck="false"
-      type="text"
-      [value]="state.query"
-      (input)="handleChange($event.target.value)"
-      (focus)="focus.emit($event)"
-      (blur)="blur.emit($event)"/>
-  </mat-form-field>
-
-  <tft-results>    
-    <ng-template let-hits="hits">
-
-      <tft-ingredient-item *ngFor="let ingredient of hits" [ingredient]="ingredient">
-      </tft-ingredient-item>
-    </ng-template>
-  </tft-results> -->
-
-  <mat-form-field class="example-full-width">
-    <input 
-      matInput 
+      spellcheck="false" 
+      formControlName="autoComplete"
       [placeholder]="placeholder"
       [matAutocomplete]="auto"
       [value]="state.query"
@@ -33,15 +15,21 @@
     <mat-autocomplete #auto="matAutocomplete">
       <tft-results>    
         <ng-template let-hits="hits">
-          <mat-option *ngFor="let hit of hits" [value]="hit.name">
-            <img style="vertical-align:middle;" aria-hidden src="{{state.flag}}" height="25" />
-            <span>{{ hit.name }}</span>
+          <mat-option 
+            *ngFor="let hit of hits" 
+            (click)="handleSelect($event, hit)"
+            [value]="hit.name">
+            <img 
+            *ngIf="hit[imageUrlParam]"
+            [src]="hit[imageUrlParam]" 
+            style="vertical-align:middle;" 
+            aria-hidden 
+            height="25"/>
+            <span> {{ hit.name }} </span>
           </mat-option>
-    
-          <!-- <tft-ingredient-item *ngFor="let ingredient of hits" [ingredient]="ingredient">
-          </tft-ingredient-item> -->
+          
         </ng-template>
-        </tft-results>
+      </tft-results>
     </mat-autocomplete>
   </mat-form-field>
 
@@ -52,21 +40,21 @@
     <mat-icon>
       search
     </mat-icon>
-    {{ submitTitle }}
+    {{ selectTitle }}
   </button>
 
 
-  <!-- <button 
-    *ngIf="displayResetButton"
+  <button 
+    *ngIf="displayClearButton"
     mat-raised-button
     color="accent"
-    type="reset"
-    title="{{resetTitle}}"
-    (click)="handleReset($event)">
+    title="{{clearTitle}}"
+    (click)="handleClear($event)">
     <mat-icon>
       close
     </mat-icon>
-    {{ resetTitle }}
-  </button> -->
+    {{ clearTitle }}
+  </button>
+</form>
 
 
