finished autocomplete component tested in testbed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,22 +2,23 @@
 <h1>Sandbox for building tft-library</h1>
 
 <tft-instantsearch [config]="searchConfig">
-
   <tft-auto-complete (submit)="logItem($event)"></tft-auto-complete>
+</tft-instantsearch>
+
+<!-- <tft-instantsearch [config]="searchConfig">
+
 
   <tft-search-box>
   </tft-search-box>
 
   <tft-refinement-list [attributeName]="filterCategory" [title]="filterPlaceholder">
   </tft-refinement-list>
-  <!-- <tft-sort-by [indices]="sortIndices">
-    
-  </tft-sort-by> -->
+
   <tft-pagination [maxPages]="3">
   </tft-pagination>
   <tft-results [transformItems]="logItem">
   </tft-results>
 
-</tft-instantsearch>
+</tft-instantsearch> -->
 
 
