--- a/src/app/modules/search/auto-complete/auto-complete.component.html
+++ b/src/app/modules/search/auto-complete/auto-complete.component.html
@@ -1,3 +1,4 @@
+
 <form [formGroup]="formContainer">
   <mat-form-field>
     <input 
@@ -5,7 +6,7 @@
       autocapitalize="off"
       autocorrect="off"
       spellcheck="false" 
-      formControlName="autoComplete"
+      formControlName="autocomplete"
       [placeholder]="placeholder"
       [matAutocomplete]="auto"
       [value]="state.query"
@@ -56,5 +57,3 @@
     {{ clearTitle }}
   </button>
 </form>
-
-
