changed select icon on autocomplete

--- a/src/app/modules/search/auto-complete/auto-complete.component.html
+++ b/src/app/modules/search/auto-complete/auto-complete.component.html
@@ -41,7 +41,7 @@
     type="submit"
     (click)="handleSubmit($event)">
     <mat-icon>
-      search
+      add
     </mat-icon>
     {{ selectTitle }}
   </button>
