added algolia attribution

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h1>Sandbox for building tft-library</h1>
-
-<tft-instantsearch [config]="searchConfig">
-  <tft-auto-complete (submit)="logItem($event)"></tft-auto-complete>
-</tft-instantsearch>
+<h1 class="mat-h1">Sandbox for building tft-library</h1>
 
 <!-- <tft-instantsearch [config]="searchConfig">
+  <tft-auto-complete (submit)="logItem($event)"></tft-auto-complete>
+</tft-instantsearch> -->
+
+<tft-instantsearch [config]="searchConfig">
 
 
   <tft-search-box>
@@ -19,6 +19,6 @@
   <tft-results [transformItems]="logItem">
   </tft-results>
 
-</tft-instantsearch> -->
+</tft-instantsearch>
 
 
