--- a/src/app/modules/search/auto-complete/auto-complete.component.html
+++ b/src/app/modules/search/auto-complete/auto-complete.component.html
@@ -59,4 +59,13 @@
     {{ clearTitle }}
   </button>
 
+  <div class="algolia-disclaimer">
+    <span class="mat-subheading-2">
+      powered by 
+    </span>
+    <img 
+      src='../../../assets/images/logos/algolia.png' 
+      alt='algolia logo'>
+  </div>
+
 </form>
