--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,27 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<h1 class="mat-h1">Sandbox for building tft-library</h1>
 
+
+
+
+<div fxLayout="column" fxFill>
+  <tft-header 
+    role="header"
+    (menuClicked)="sidenav.toggle()"
+    [subtitle]="'Component Library'">
+  </tft-header>
+  <mat-sidenav-container fxFlex aria-live="main content">
+    <mat-sidenav #sidenav>
+      <tft-sidenav-navigation [links]="linksToExamples"></tft-sidenav-navigation>
+    </mat-sidenav>
+    <mat-sidenav-content class="main-container">
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
+</div>   
 <!-- <tft-instantsearch [config]="searchConfig">
   <tft-auto-complete (submit)="logItem($event)"></tft-auto-complete>
 </tft-instantsearch> -->
 
-<tft-instantsearch [config]="searchConfig">
-
-
-  <tft-search-box>
-  </tft-search-box>
-
-  <tft-refinement-list [attributeName]="filterCategory" [title]="filterPlaceholder">
-  </tft-refinement-list>
-
-  <tft-pagination [maxPages]="3">
-  </tft-pagination>
-  <tft-results [transformItems]="logItem">
-  </tft-results>
-
-</tft-instantsearch>
+<!--  -->
 
 
