initial nav component and autocomplete example

--- a/src/app/modules/core/sidenav-navigation/sidenav-navigation.component.html
+++ b/src/app/modules/core/sidenav-navigation/sidenav-navigation.component.html
@@ -1,3 +1,8 @@
-<p>
-  sidenav-navigation works!
-</p>
+<mat-nav-list>
+    <mat-list-item *ngFor="let link of links">
+       <a matLine [routerLink]="link.path">{{ link.title }}</a>
+       <button mat-icon-button (click)="showInfo(link)">
+          <mat-icon>info</mat-icon>
+       </button>
+    </mat-list-item>
+  </mat-nav-list>
