--- a/src/app/modules/search/auto-complete/auto-complete.component.scss
+++ b/src/app/modules/search/auto-complete/auto-complete.component.scss
@@ -1,9 +1,5 @@
-.algolia-disclaimer {
-  span {
-    position: relative;
-    bottom: 7px;
-  }
+mat-hint {
   img {
-    height: 24px;
+    height: 14px;
   }
 }
