--- a/src/app/modules/examples/autocomplete-example/autocomplete-example.component.html
+++ b/src/app/modules/examples/autocomplete-example/autocomplete-example.component.html
@@ -1,3 +1,20 @@
-<tft-instantsearch [config]="searchConfig">
-  <tft-auto-complete (submit)="logItem($event)"></tft-auto-complete>
+<tft-instantsearch 
+  [config]="searchConfig">
+  <tft-auto-complete 
+    (submit)="onItemSelected($event)">
+  </tft-auto-complete>
 </tft-instantsearch>
+
+
+<mat-card>
+  <pre *ngIf="!!item; else directUser">
+    {{
+      item | json
+    }}
+  </pre>
+  <ng-template #directUser>
+    <mat-card-title>
+      Select item to activate (submit) event in autocomplete component
+    </mat-card-title>
+  </ng-template>
+</mat-card>
