--- a/src/app/modules/search/search-box/search-box.component.scss
+++ b/src/app/modules/search/search-box/search-box.component.scss
@@ -1,9 +1,15 @@
-.algolia-disclaimer {
-  span {
-    position: relative;
-    bottom: 7px;
-  }
+// .algolia-disclaimer {
+//   span {
+//     position: relative;
+//     bottom: 7px;
+//   }
+//   img {
+//     height: 24px;
+//   }
+// }
+
+mat-hint {
   img {
-    height: 24px;
+    height: 14px;
   }
 }
