changed auto-complete to autocomple finished prepping for autocomplete chip list

--- a/src/app/examples/autocomplete-example/autocomplete-example.component.html
+++ b/src/app/examples/autocomplete-example/autocomplete-example.component.html
@@ -1,9 +1,9 @@
 <tft-instantsearch 
   [config]="searchConfig">
-  <tft-auto-complete 
+  <tft-autocomplete 
     (change)="handleChange($event)"
     (submit)="onItemSelected($event)">
-  </tft-auto-complete>
+  </tft-autocomplete>
 </tft-instantsearch>
 
 <mat-card>
