refinement chip list working

--- a/src/app/examples/autocomplete-example/autocomplete-example.component.html
+++ b/src/app/examples/autocomplete-example/autocomplete-example.component.html
@@ -4,6 +4,11 @@
     (change)="handleChange($event)"
     (submit)="onItemSelected($event)">
   </tft-autocomplete>
+
+  <tft-autocomplete-refinement-list
+    (change)="handleChange($event)"
+    (submit)="onItemSelected($event)">
+  </tft-autocomplete-refinement-list>
 </tft-instantsearch>
 
 <mat-card>
