--- a/src/app/examples/autocomplete-refinement-list-example/autocomplete-refinement-list-example.component.html
+++ b/src/app/examples/autocomplete-refinement-list-example/autocomplete-refinement-list-example.component.html
@@ -1,9 +1,9 @@
 <tft-instantsearch 
   [config]="searchConfig">
-  <tft-autocomplete 
+  <tft-autocomplete-refinement-list
     (change)="handleChange($event)"
     (submit)="onItemSelected($event)">
-  </tft-autocomplete>
+  </tft-autocomplete-refinement-list>
 </tft-instantsearch>
 
 <mat-card>
