--- a/src/app/modules/search/refinement-list/refinement-list.component.html
+++ b/src/app/modules/search/refinement-list/refinement-list.component.html
@@ -1,43 +1,80 @@
 <form
-  *ngIf="withSearchBox"
+  [formGroup]="formContainer"
   (submit)="handleSubmit($event)"
-  novalidate>
-  <input
-    autocapitalize="off"
-    autocorrect="off"
-    placeholder="{{searchPlaceholder}}"
-    role="textbox"
-    spellcheck="false"
-    type="text"
-    [value]="searchQuery"
-    (input)="handleChange($event.target.value)"
-  />
+  fxFlex
+  fxLayoutAlign="center center"
+  fxLayoutGap='8px'>
+   
+  <mat-form-field
+    fxFlex>
+    <mat-chip-list #chipList>
+			<mat-chip 
+        *ngFor="let chip of selected" 
+        [selectable]="chipSelectable" 
+        [removable]="areChipsRemovable" 
+        (remove)="removeChip(chip)">
+				{{chip.label}}
+				<mat-icon 
+          matChipRemove 
+          *ngIf="areChipsRemovable">
+          cancel
+        </mat-icon>
+			</mat-chip>
+
+      <!-- [value]="state.query" -->
+      <input 
+        role="textbox"
+        type="text"
+        formControlName="autocomplete" 
+        [placeholder]="placeholder"        
+        [matChipInputFor]="chipList" 
+        [matAutocomplete]="auto"            
+        [matChipInputAddOnBlur]="addChipOnBlur"
+        matInput
+        [value]="searchQuery"
+        (input)="handleChange($event.target.value)"
+        autocapitalize="off"
+        autocorrect="off"
+        spellcheck="false" 
+        #chipInput/>
+		</mat-chip-list>
+		<mat-autocomplete 
+      #auto="matAutocomplete"
+      (optionSelected)="handleSelect($event)"
+      [displayWith]="mapToName">
+      <!-- (click)="handleSelect($event, item)" -->
+      <mat-option 
+        *ngFor="let item of items"  
+        [value]="item">
+
+        <img 
+          *ngIf="item[imageUrlParam]"
+          [src]="item[imageUrlParam]" 
+          style="vertical-align:middle;" 
+          aria-hidden 
+          height="25"/>
+        <span> {{ item.label }} </span>
+      </mat-option>
+          
+    </mat-autocomplete>
+    
+  </mat-form-field>
 </form>
 
+
+
+<!-- 
 <mat-form-field>
-  <mat-select [placeholder]="title" multiple="true" >
+  <mat-select 
+    [placeholder]="title" 
+    multiple="true"
+    (selectionChange)="refine($event)">
     <mat-option 
       *ngFor="let item of items" 
-      [value]="item.value"     
-      (click)="refine($event, item)">
+      [value]="item">
       {{ item.label | titlecase }}
     </mat-option>
   </mat-select>
-</mat-form-field>
+</mat-form-field> 
+-->
 
-<button
-  *ngIf="state.canToggleShowMore"
-  (click)="state.toggleShowMore()">
-  {{state.isShowingMore ? showLessLabel : showMoreLabel}}
-</button>
-
-
-
-<!-- <mat-chip-list>
-  {{ item.label | titlecase }} 
-  <mat-chip 
-    color='accent' 
-    selected="true">
-    {{item.count}}
-  </mat-chip>
-</mat-chip-list> -->
