--- a/src/app/examples/autocomplete-example/autocomplete-example.component.html
+++ b/src/app/examples/autocomplete-example/autocomplete-example.component.html
@@ -1,14 +1,20 @@
 <tft-instantsearch 
   [config]="searchConfig">
-  <tft-autocomplete 
-    (change)="handleChange($event)"
-    (submit)="onItemSelected($event)">
-  </tft-autocomplete>
 
-  <tft-autocomplete-refinement-list
-    (change)="handleChange($event)"
-    (submit)="onItemSelected($event)">
-  </tft-autocomplete-refinement-list>
+  <tft-search-box>
+  </tft-search-box>
+  
+  <tft-results>
+  </tft-results>
+  <!-- <tft-refinement-list 
+    [attributeName]="filterCategory" 
+    [title]="'Search Title'">
+  </tft-refinement-list>
+
+  <tft-filter-list 
+    [attributeName]="filterCategory" 
+    [title]="'Search Title'">
+  </tft-filter-list> -->
 </tft-instantsearch>
 
 <mat-card>
