ng update killed some logs

--- a/src/app/modules/search/filter-list/filter-list.component.html
+++ b/src/app/modules/search/filter-list/filter-list.component.html
@@ -1,4 +1,4 @@
-<form
+<!-- <form
   *ngIf="withSearchBox"
   (submit)="handleSubmit($event)"
   novalidate>
@@ -12,7 +12,7 @@
     [value]="searchQuery"
     (input)="handleChange($event.target.value)"
   />
-</form>
+</form> -->
 
 <mat-form-field>
   <mat-select 
